chore(QTDI-2894): add more S6204